# fks-eduke32

./: .gitignore  README.md
polymer/eduke32/: CMakeLists.txt  Makefile  SEHELP.HLP  STHELP.HLP  build_funkey.sh  eduke32.sln  eduke32.vcproj  eduke32.vcxproj  eduke32.vcxproj.filters  names.h
polymer/eduke32/installer/: eduke32.nsi
polymer/eduke32/libogg/src/: framing.c
polymer/eduke32/rsrc/: default.funkey-s.desktop  manifest.build.xml  manifest.game.xml
polymer/eduke32/rsrcopk/: default.funkey-s.desktop  eduke32.sh  libvorbis.so.0  libvorbisfile.so.3  timidity.cfg
polymer/eduke32/samples/: a.m32  duke3d.def.sample  enhance.con.sample  spriteclip.txt  tiles.cfg
polymer/eduke32/source/: _functio.h  config.c  game.c  game.h  gamedef.c  global.h  grpscan.c  grpscan.h  menus.c  osdcmds.c  savegame.c  savegame.h  sdlmusic.c  sounds.c
polymer/eduke32/source/enet/: Makefile
polymer/eduke32/source/enet/src/: unix.c
polymer/eduke32/source/jaudiolib/: Makefile
polymer/eduke32/source/jaudiolib/include/: fx_man.h  sndcards.h
polymer/eduke32/source/jaudiolib/src/: _multivc.h  driver_directsound.h  linklist.h  ll_man.h  multivoc.c  multivoc.h  pitch.c  pitch.h  vorbis.c
polymer/eduke32/source/jmact/: control.c  control.h  keyboard.c
polymer/eduke32/source/timidity/: Makefile  filenames.h  playmidi.c  timidity.c  timidity_internal.h
